aiccu: changed UI to tabbed form

--- a/src/opnsense/mvc/app/controllers/SixXS/AICCU/forms/general.xml
+++ b/src/opnsense/mvc/app/controllers/SixXS/AICCU/forms/general.xml
@@ -1,63 +1,73 @@
 <form>
-    <field>
-        <id>aiccu.general.enabled</id>
-        <label>Enabled</label>
-        <type>checkbox</type>
-        <help>Enable the AICCU service</help>
-    </field>
-    <field>
-        <id>aiccu.general.username</id>
-        <label>Username</label>
-        <type>text</type>
-        <help>SixXS login information</help>
-        <hint><![CDATA[<nic-handle/username>]]></hint>
-    </field>
-    <field>
-        <id>aiccu.general.password</id>
-        <label>Password</label>
-        <type>password</type>
-        <help>SixXS login password</help>
-    </field>
-    <field>
-        <id>aiccu.general.tunnelId</id>
-        <label>Tunnel ID</label>
-        <type>text</type>
-        <help>SixXS tunnel ID (only required if there are multiple tunnels for this account)</help>
-        <hint>Txxxx</hint>
-    </field>
-    <field>
-        <id>aiccu.general.protocol</id>
-        <label>Protocol</label>
-        <type>dropdown</type>
-        <help>Protocol used for setting up the tunnel</help>
-        <advanced>true</advanced>
-    </field>
-    <field>
-        <id>aiccu.general.server</id>
-        <label>Server</label>
-        <type>text</type>
-        <help>Server used for setting up the tunnel</help>
-        <advanced>true</advanced>
-    </field>
-    <field>
-        <id>aiccu.general.behindNat</id>
-        <label>Behind NAT</label>
-        <type>checkbox</type>
-        <help>Indicates that a NAT-kind network is between the client and the server</help>
-        <advanced>true</advanced>
-    </field>
-    <field>
-        <id>aiccu.general.defaultRoute</id>
-        <label>Default Route</label>
-        <type>checkbox</type>
-        <help>Configure the IPv6 default gateway into the tunnel</help>
-        <advanced>true</advanced>
-    </field>
-    <field>
-        <id>aiccu.general.customConfig</id>
-        <label>Advanced Configuration</label>
-        <type>textbox</type>
-        <help>Additional bare configuration directives (will be added directly to AICCU configuration file)</help>
-        <advanced>true</advanced>
-    </field>
+    <tab id="aiccu-configuration" description="Configuration">
+        <field>
+            <id>aiccu.general.enabled</id>
+            <label>Enabled</label>
+            <type>checkbox</type>
+            <help>Enable the AICCU service</help>
+        </field>
+        <field>
+            <id>aiccu.general.username</id>
+            <label>Username</label>
+            <type>text</type>
+            <help>SixXS login information</help>
+            <hint><![CDATA[<nic-handle/username>]]></hint>
+        </field>
+        <field>
+            <id>aiccu.general.password</id>
+            <label>Password</label>
+            <type>password</type>
+            <help>SixXS login password</help>
+        </field>
+        <field>
+            <id>aiccu.general.tunnelId</id>
+            <label>Tunnel ID</label>
+            <type>text</type>
+            <help>SixXS tunnel ID (only required if there are multiple tunnels for this account)</help>
+            <hint>Txxxx</hint>
+        </field>
+        <field>
+            <id>aiccu.general.protocol</id>
+            <label>Protocol</label>
+            <type>dropdown</type>
+            <help>Protocol used for setting up the tunnel</help>
+            <advanced>true</advanced>
+        </field>
+        <field>
+            <id>aiccu.general.server</id>
+            <label>Server</label>
+            <type>text</type>
+            <help>Server used for setting up the tunnel</help>
+            <advanced>true</advanced>
+        </field>
+        <field>
+            <id>aiccu.general.behindNat</id>
+            <label>Behind NAT</label>
+            <type>checkbox</type>
+            <help>Indicates that a NAT-kind network is between the client and the server</help>
+            <advanced>true</advanced>
+        </field>
+        <field>
+            <id>aiccu.general.defaultRoute</id>
+            <label>Default Route</label>
+            <type>checkbox</type>
+            <help>Configure the IPv6 default gateway into the tunnel</help>
+            <advanced>true</advanced>
+        </field>
+        <field>
+            <id>aiccu.general.customConfig</id>
+            <label>Advanced Configuration</label>
+            <type>textbox</type>
+            <help>Additional bare configuration directives (will be added directly to AICCU configuration file)</help>
+            <advanced>true</advanced>
+        </field>
+    </tab>
+
+    <tab id="aiccu-status" description="Status">
+        <field>
+            <id>aiccu.status.running</id>
+            <label>Running</label>
+            <type>info</type>
+        </field>
+    </tab>
 </form>
